syntax = "proto3";

package user;

option go_package = ";api";

// mvc-grpc> protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative api\*.proto

// API

service UserService {
    rpc GetUser(UserIDRequest) returns (UserDataReply) {}
}

// client request user data providing user id
message UserIDRequest {
    int64 id =1;
}

message UserData {
    int64 id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
}

message UserDataReply {
    bool is_found = 1;
    UserData  user_data = 2;
}